2005-03-14  Don Allingham  <don@gramps-project.org>
	* src/gramps_main.py: use new GRAMPS homepage

2005-03-13  Alex Roitman  <shura@gramps-project.org>
	* src/DateEdit.py (update_after_editor): Add method.
	* src/EditPerson.py: Always have birth/death events (never None);
	Use new update method for dates; Only commit death/birth if changed;
	Only add new birth/death if non-empty.
	* src/EventEdit.py: Translate stored event names before including in
	menu; Exclude birth/death from menu; Do not add birth/death to the
	custom event types; Only detect type change for non-birth/death.
	* src/GrampsDbBase.py: Do not commit objects with empty handles.
	* src/GrampsInMemDB.py: Do not commit objects with empty handles.
	* src/Utils.py (family_name): Add clause for unknown parents.

	* src/EventEdit.py (get_place): Typo.

	* src/DisplayTrace.py (__init__): Mark debian distros.

2005-03-12  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py (Rule,GenericFilter): New methods prepare() and
	reset(), that are called before/after a filter is applied, to properly
	support query caches; (IsWitness): new filter;
	(RelationshipPathBetween,IsDescendantOf,IsLessThanNthGenerationDescendantOf,
	IsMoreThanNthGenerationDescendantOf,IsChildOfFilterMatch,IsSiblingOfFilterMatch,
	IsAncestorOf,IsAncestorOfFilterMatch,IsLessThanNthGenerationAncestorOf,
	IsMoreThanNthGenerationAncestorOf,IsParentOfFilterMatch,HasCommonAncestorWith):
	use prepare() and reset() to create a proper query cache. Currently the
	cache was only created once after object creation and never updated.
	* src/gramps_main.py: Add new filters to the menu.
	
2005-03-11  Alex Roitman  <shura@gramps-project.org>
	* src/RelLib.py (SourceNote): Add methods for detection and removal
	source references in itself and child objects; (SourceNote,Person,
	Family,Event,Place,Source,MediaRef): Add method for determining child
	sourceref-capable objects.
	* src/Utils.py (get_source_referents): Add function.